--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,4 +1,3 @@
-
 <!-- Start Banner Area -->
 <canvas id="canvas-basic"></canvas>
 <section class="banner-area gradient-blue-grey-blue" id="home">
@@ -11,6 +10,7 @@
         <a href="#about" class="primary-btn banner-btn">Explore Us</a>
         <br>
         <i class="fa fa-chevron-down white mt-5 arrow bounce" aria-hidden="true"></i>
+        <a href="#about">About</a>
     </div>
 </section>
 <!-- End Banner Area -->
@@ -752,25 +752,6 @@
     </div>
 </section>
 <!-- End Contact Us Area -->
-
-<!-- scrollUp Area -->
-<section class="nav-item text-center">
-    <a class="nav-link p-0" href="#home">
-        <i class="fa fa-angle-up scrollUp white" aria-hidden="true"></i>
-    </a>
-</section>
-<!-- End scrollUp Area -->
-
-<!-- Footer Area -->
-<footer>
-    <section class="footer" id="footer">
-        <div class="bg-black p-5 text-center">
-            <h2 class="white">
-                <span style="font-size: 14px; font-weight:100;" class="muted mr-2">Powered By</span> Apex</h2>
-        </div>
-    </section>
-</footer>
-<!-- End footer Area -->
 
 <!-- Script Link Area -->
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
