--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-faded">
     <div class="container-fluid">
         <!--Esto le da un margen a la izquiera para que no lo tape el menu lateral-->
-        <div class="navbar-header">
+        <div class="">
             <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
                 <span class="logo-img"></span>
             </a>
