--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,14 +1,14 @@
-
 <!-- Start Banner Area -->
 <canvas id="canvas-basic"></canvas>
 <section class="banner-area gradient-blue-grey-blue" id="home">
     <img src="img/mockup-1.png" alt="banner image" class="mt-7 ml-5 position-absolute banner-img w-30">
-    <img src="img/mockup-2.png" alt="banner image" class="mt-7 ml-5 position-absolute banner-img w-30" style="margin-left:65% !important; margin-top:25% !important;">
+    <img src="img/mockup-2.png" alt="banner image" class="mt-7 ml-5 position-absolute banner-img w-30"
+         style="margin-left:65% !important; margin-top:25% !important;">
     <div class="banner-content text-center pt-max position-relative">
         <p class="text-white">We work hard, we result perfect</p>
         <h1 class="text-white">Creative Digital Agency</h1>
         <h3 class="white">Multi Purpose Template</h3>
-        <a href="#about" class="primary-btn banner-btn">Explore Us</a>
+        <a  class="primary-btn banner-btn" (click)="test()">Explore Us</a>
         <br>
         <i class="fa fa-chevron-down white mt-5 arrow bounce" aria-hidden="true"></i>
     </div>
@@ -92,18 +92,21 @@
                                         <img class="d-block w-100" src="img/project-3.jpg" alt="project 3">
                                     </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselExample" role="button"
+                                   data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselExample" role="button"
+                                   data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Project Title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
                                 <p class="card-text">
                                     <small class="text-muted">Last updated 3 mins ago</small>
                                 </p>
@@ -122,18 +125,21 @@
                                         <img class="d-block w-100" src="img/project-12.jpg" alt="project 12">
                                     </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleTwo" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselExampleTwo" role="button"
+                                   data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExampleTwo" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselExampleTwo" role="button"
+                                   data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Project Title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
                                 <p class="card-text">
                                     <small class="text-muted">Last updated 3 mins ago</small>
                                 </p>
@@ -152,18 +158,21 @@
                                         <img class="d-block w-100" src="img/project-15.jpg" alt="project 15">
                                     </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleThree" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselExampleThree" role="button"
+                                   data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExampleThree" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselExampleThree" role="button"
+                                   data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Project Title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
                                 <p class="card-text">
                                     <small class="text-muted">Last updated 3 mins ago</small>
                                 </p>
@@ -182,18 +191,21 @@
                                         <img class="d-block w-100" src="img/project-6.jpg" alt="project 6">
                                     </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleFour" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselExampleFour" role="button"
+                                   data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExampleFour" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselExampleFour" role="button"
+                                   data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
                             <div class="caed-body p-3">
                                 <h5 class="card-title">Project Title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
                                 <p class="card-text">
                                     <small class="text-muted">Last updated 3 mins ago</small>
                                 </p>
@@ -212,18 +224,21 @@
                                         <img class="d-block w-100" src="img/project-9.jpg" alt="project 9">
                                     </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleFive" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselExampleFive" role="button"
+                                   data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExampleFive" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselExampleFive" role="button"
+                                   data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Project Title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
                                 <p class="card-text">
                                     <small class="text-muted">Last updated 3 mins ago</small>
                                 </p>
@@ -242,18 +257,21 @@
                                         <img class="d-block w-100" src="img/project-18.jpg" alt="project 18">
                                     </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleSix" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselExampleSix" role="button"
+                                   data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExampleSix" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselExampleSix" role="button"
+                                   data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Project Title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
                                 <p class="card-text">
                                     <small class="text-muted">Last updated 3 mins ago</small>
                                 </p>
@@ -516,7 +534,8 @@
                         <i class="fa fa-star danger" aria-hidden="true"></i>
                         <i class="fa fa-star danger" aria-hidden="true"></i>
                     </div>
-                    <p class="pb-3">Very nice theme + good documentation. I had some issues, but fixed very quickly thanks to the amazing support. Our
+                    <p class="pb-3">Very nice theme + good documentation. I had some issues, but fixed very quickly
+                        thanks to the amazing support. Our
                         project is going live in 2 weeks and it looks very nice with this theme!!</p>
                 </div>
                 <div class="carousel-item">
@@ -529,7 +548,8 @@
                         <i class="fa fa-star danger" aria-hidden="true"></i>
                         <i class="fa fa-star danger" aria-hidden="true"></i>
                     </div>
-                    <p class="pb-3">10 Star. A unique template with modern design and great quality. Just loved it... Simply awesome. You guys are genius.
+                    <p class="pb-3">10 Star. A unique template with modern design and great quality. Just loved it...
+                        Simply awesome. You guys are genius.
                         I have purchased so many templates so far, but this the best template among them. Cheers.</p>
                 </div>
                 <div class="carousel-item">
@@ -542,8 +562,10 @@
                         <i class="fa fa-star danger" aria-hidden="true"></i>
                         <i class="fa fa-star danger" aria-hidden="true"></i>
                     </div>
-                    <p class="pb-3">The best angular admin template out there with awesome design, components, cohesive code and quick support. Many options
-                        to use and attention to every detail. Of all admin templates I have used can only recommend this one!!</p>
+                    <p class="pb-3">The best angular admin template out there with awesome design, components, cohesive
+                        code and quick support. Many options
+                        to use and attention to every detail. Of all admin templates I have used can only recommend this
+                        one!!</p>
                 </div>
             </div>
             <a class="carousel-control-p" href="#myCarousel" role="button" data-slide="prev">
@@ -582,7 +604,8 @@
                         <li class="mt-2">Help center access</li>
                     </ul>
                 </div>
-                <button type="button" class="btn btn-lg btn-block btn-outline-danger p-3 btn-pricing mb-4">Buy Now</button>
+                <button type="button" class="btn btn-lg btn-block btn-outline-danger p-3 btn-pricing mb-4">Buy Now
+                </button>
             </div>
             <div class="card rounded-0 border-0 box-shadow mb-3 t-md-center pricing-content">
                 <div class="card-header pricing-header">
@@ -600,7 +623,8 @@
                         <li class="mt-2">Help center access</li>
                     </ul>
                 </div>
-                <button type="button" class="btn btn-lg btn-block btn-outline-danger p-3 btn-pricing mb-4">Buy Now</button>
+                <button type="button" class="btn btn-lg btn-block btn-outline-danger p-3 btn-pricing mb-4">Buy Now
+                </button>
             </div>
             <div class="card rounded-0 border-0 box-shadow mb-3 t-md-center pricing-content">
                 <div class="card-header pricing-header">
@@ -618,7 +642,8 @@
                         <li class="mt-2">Help center access</li>
                     </ul>
                 </div>
-                <button type="button" class="btn btn-lg btn-block btn-outline-danger p-3 btn-pricing mb-4">Buy Now</button>
+                <button type="button" class="btn btn-lg btn-block btn-outline-danger p-3 btn-pricing mb-4">Buy Now
+                </button>
             </div>
         </div>
     </div>
@@ -716,8 +741,10 @@
         <p class="text-center mt-4">Please fill up the form and we'll be in touch soon.</p>
         <div class="row mt-5 p-sm">
             <div class="col-lg-6 mt-3">
-                <p>This is by far the cleanest template and the most well structured and the most well thought out design theme I have
-                    ever used. The codes are up to standard. We can help you find the precise message to clearly speak to who.</p>
+                <p>This is by far the cleanest template and the most well structured and the most well thought out
+                    design theme I have
+                    ever used. The codes are up to standard. We can help you find the precise message to clearly speak
+                    to who.</p>
                 <p>
                     <i class="fa fa-map-marker" aria-hidden="true"></i> 58 alley, Mertle St, Rd 12, Apt 2C
                     <br> Seattle, Washington</p>
@@ -736,13 +763,16 @@
                             <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+                            <input type="text" class="form-control" id="email" name="email" placeholder="Email"
+                                   required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject"
+                                   required>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                            <textarea class="form-control" id="message" placeholder="Message" maxlength="140"
+                                      rows="7"></textarea>
                         </div>
                         <a href="#" class="primary-btn banner-btn mt-4" style=" color: #000;">Submit Form</a>
                     </form>
@@ -774,7 +804,8 @@
 
 <!-- Script Link Area -->
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+        integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/vendor/granim.min.js"></script>
