--- a/src/main/webapp/app/dashboard-institution/dashboard-institution.component.html
+++ b/src/main/webapp/app/dashboard-institution/dashboard-institution.component.html
@@ -1,5 +1,5 @@
 <!--Statistics cards Starts-->
-<div class="row" *ngIf="institution">
+<div class="row pl-3 pr-3" *ngIf="institution">
     <div class="col-xl-3 col-lg-6 col-md-6 col-12">
         <div class="card gradient-blackberry">
             <div class="card-body">
@@ -47,11 +47,11 @@
             <div class="card-body">
                 <div class="card-block pt-2 pb-0">
                     <div class="media">
-                        <div class="media-body white text-left" *ngIf="institution.aptitudeTests">
-                            <h3 class="font-large-1 mb-0">{{institution.aptitudeTests.length}}</h3>
+                        <div class="media-body white text-left" *ngIf="aptitudeTests">
+                            <h3 class="font-large-1 mb-0">{{aptitudeTests.length}}</h3>
                             <span>Pruebas de aptitud</span>
                         </div>
-                        <div class="media-body white text-left" *ngIf="!institution.aptitudeTests">
+                        <div class="media-body white text-left" *ngIf="!aptitudeTests">
                             <h3 class="font-large-1 mb-0">No tiene</h3>
                             <span>Pruebas de aptitud</span>
                         </div>
@@ -72,8 +72,12 @@
             <div class="card-body">
                 <div class="card-block pt-2 pb-0">
                     <div class="media">
-                        <div class="media-body white text-left">
-                            <h3 class="font-large-1 mb-0">???</h3>
+                        <div class="media-body white text-left" *ngIf="focusGroups">
+                            <h3 class="font-large-1 mb-0">{{focusGroups.length}}</h3>
+                            <span>Grupos de enfoque</span>
+                        </div>
+                        <div class="media-body white text-left" *ngIf="!focusGroups">
+                            <h3 class="font-large-1 mb-0">No tiene</h3>
                             <span>Grupos de enfoque</span>
                         </div>
                         <div class="media-right white text-right">
@@ -90,94 +94,61 @@
 </div>
 <!--Statistics cards Ends-->
 
-<div class="row" matchHeight ="card">
+<div class="row" matchHeight="card">
+
     <div class="col-xl-4 col-lg-12">
-        <div class="card">
+        <div class="card shadow-lg">
             <div class="card-header">
                 <h4 class="card-title mb-0">Participantes</h4>
             </div>
-            <div class="card-body">
+            <div class="card-body" *ngIf="participants">
                 <div class="card-block">
-                    <div class="media mb-1">
-                        <a>
+                    <div _ngcontent-c26="" class="media mb-1" *ngFor="let participant of participants">
+                        <a _ngcontent-c26="" *ngIf="participant.gender == 'MALE'">
+                            <img _ngcontent-c26="" class="media-object d-flex mr-3 bg-primary height-50 width-50 rounded-circle" src="https://res.cloudinary.com/utilisimo/image/upload/v1544891336/oi1fydm4aykjzdmn9mzh.png">
                         </a>
-                        <div class="media-body">
-                            <h4 class="font-medium-1 mt-1 mb-0">Jessica Rice</h4>
-                            <p class="text-muted font-small-3">UX Designer</p>
+                        <a _ngcontent-c26="" *ngIf="participant.gender == 'FEMALE'">
+                            <img _ngcontent-c26="" class="media-object d-flex mr-3 bg-primary height-50 width-50 rounded-circle" src="https://res.cloudinary.com/utilisimo/image/upload/v1544885463/cy2nvotjzg3k3ig5jdaz.png">
+                        </a>
+                        <a _ngcontent-c26="" *ngIf="participant.gender == 'UNDEFINED'">
+                            <img _ngcontent-c26="" class="media-object d-flex mr-3 bg-primary height-50 width-50 rounded-circle" src="https://res.cloudinary.com/utilisimo/image/upload/v1553464422/user-placeholder_fqdsvl.png">
+                        </a>
+                        <div _ngcontent-c26="" class="media-body">
+                            <h4 _ngcontent-c26="" class="font-medium-1 mt-1 mb-0">{{participant.user.name}}</h4>
+                            <p _ngcontent-c26="" class="text-muted font-small-3">{{participant.user.identificationNumber}}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="col-xl-8 col-lg-12 col-12">
-        <div class="card">
+        <div class="card shadow-lg">
             <div class="card-header">
-                <h4 class="card-title">Grupos de enfoque</h4>
+                <h4 routerLink="/focus-group" routerLinkActive="active" class="card-title cursor-pointer">Grupos de
+                    enfoque</h4>
             </div>
             <div class="card-body">
-                <table class="table table-responsive-sm text-center">
+                <table class="table table-responsive-md text-center" *ngIf="focusGroups">
                     <thead>
                     <tr>
-                        <th>Image</th>
-                        <th>Product</th>
-                        <th>Quantity</th>
-                        <th>Status</th>
-                        <th>Amount</th>
-                        <th>Delete</th>
+                        <th><span>Nombre</span></th>
+                        <th><span>Descripción</span></th>
+                        <th><span>Código</span></th>
+                        <th><span>Estado</span></th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>Ferrero Rocher</td>
-                        <td>1</td>
-                        <td>
-                            <a class="btn btn-raised btn-round btn-primary">Active</a>
+                    <tr *ngFor="let focusGroup of focusGroups">
+                        <td>{{focusGroup.name}}</td>
+                        <td>{{focusGroup.description}}</td>
+                        <td>{{focusGroup.code}}</td>
+                        <td *ngIf="(focusGroup.endDate | date) < (today | date)">
+                            <a class="btn btn-raised btn-round btn-danger" style="cursor: default;">Finalizado</a>
                         </td>
-                        <td>$19.94</td>
-                        <td>
-                            <a class="danger" data-original-title="" title="">
-                                <i class="ft-x"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Headphones</td>
-                        <td>2</td>
-                        <td>
-                            <a class="btn btn-raised btn-round btn-danger">Disabled</a>
-                        </td>
-                        <td>$99.00</td>
-                        <td>
-                            <a class="danger" data-original-title="" title="">
-                                <i class="ft-x"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Camera</td>
-                        <td>1</td>
-                        <td>
-                            <a class="btn btn-raised btn-round btn-info">Paused</a>
-                        </td>
-                        <td>$299.00</td>
-                        <td>
-                            <a class="danger" data-original-title="" title="">
-                                <i class="ft-x"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Beer</td>
-                        <td>2</td>
-                        <td>
-                            <a class="btn btn-raised btn-round btn-success">Active</a>
-                        </td>
-                        <td>$24.51</td>
-                        <td>
-                            <a class="danger" data-original-title="" title="">
-                                <i class="ft-x"></i>
-                            </a>
+                        <td *ngIf="(focusGroup.endDate | date) >= (today | date)">
+                            <a class="btn btn-raised btn-round btn-success" style="cursor: default;">En curso</a>
                         </td>
                     </tr>
                     </tbody>
@@ -186,4 +157,3 @@
         </div>
     </div>
 </div>
-
