--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -259,15 +259,17 @@ th {
 /* Button CSS */
 /************************/
 
+#btnIngresarGrupo:hover {
+    color: #000 !important;
+}
+
 .primary-btn {
     line-height: 2.5rem;
     padding: 0 2.5rem;
     border-radius: 1.25rem;
-    background: transparent;
-    border: 1px solid #f83a72;
     color: #222222;
     display: inline-block;
-    font-weight: 600;
+    font-weight: 500;
     -webkit-transition: all 0.3s ease 0s;
     -moz-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
@@ -289,7 +291,6 @@ th {
 }
 
 .primary-btn:hover {
-    background: -webkit-linear-gradient(-45deg, #a03cb3, #fa3973);
     color: #fff !important;
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
 }
