--- a/src/main/webapp/app/entities/meeting/meeting-update.component.html
+++ b/src/main/webapp/app/entities/meeting/meeting-update.component.html
@@ -67,13 +67,13 @@
                                 <input type="text" class="form-control" name="description" id="field_description"
                                        [(ngModel)]="meeting.description" />
                             </div>
-                            <div class="form-group">
-                                <label class="form-control-label" for="field_focusGroup">Focus Group</label>
-                                <select class="form-control" id="field_focusGroup" name="focusGroup" [(ngModel)]="meeting.focusGroup" >
-                                    <option [ngValue]="null"></option>
-                                    <option [ngValue]="focusGroupOption.id === meeting.focusGroup?.id ? meeting.focusGroup : focusGroupOption" *ngFor="let focusGroupOption of focusgroups; trackBy: trackFocusGroupById">{{focusGroupOption.name}}</option>
-                                </select>
-                            </div>
+                            <!--<div class="form-group">-->
+                                <!--<label class="form-control-label" for="field_focusGroup">Focus Group</label>-->
+                                <!--<select class="form-control" id="field_focusGroup" name="focusGroup" [(ngModel)]="meeting.focusGroup" >-->
+                                    <!--<option [ngValue]="null"></option>-->
+                                    <!--<option [ngValue]="focusGroupOption.id === meeting.focusGroup?.id ? meeting.focusGroup : focusGroupOption" *ngFor="let focusGroupOption of focusgroups; trackBy: trackFocusGroupById">{{focusGroupOption.name}}</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
                         </div>
                         <div class="form-actions">
                             <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
