--- a/src/main/webapp/app/entities/meeting/meeting-create.component.html
+++ b/src/main/webapp/app/entities/meeting/meeting-create.component.html
@@ -10,12 +10,11 @@
                     <div class="col-md-6">
                         <div class="form-body">
                             <h4 class="form-section"><i class="ft-user"></i>Registro</h4>
-                            <jhi-alert-error></jhi-alert-error>
-                            <div class="form-group" [hidden]="!meeting.id">
-                                <label for="id">ID</label>
-                                <input type="text" class="form-control" id="id" name="id"
-                                       [(ngModel)]="meeting.id" readonly/>
-                            </div>
+                            <!--<div class="form-group" [hidden]="!meeting.id">-->
+                                <!--<label for="id">ID</label>-->
+                                <!--<input type="text" class="form-control" id="id" name="id"-->
+                                       <!--[(ngModel)]="meeting.id" readonly/>-->
+                            <!--</div>-->
                             <div class="form-group">
                                 <label for="field_date">Fecha</label>
                                 <div class="input-group">
@@ -67,13 +66,13 @@
                                 <input type="text" class="form-control" name="description" id="field_description"
                                        [(ngModel)]="meeting.description" />
                             </div>
-                            <div class="form-group">
-                                <label class="form-control-label" for="field_focusGroup">Focus Group</label>
-                                <select class="form-control" id="field_focusGroup" name="focusGroup" [(ngModel)]="meeting.focusGroup" required>
-                                    <option [ngValue]="null"></option>
-                                    <option [ngValue]="focusGroupOption.id === meeting.focusGroup?.id ? meeting.focusGroup : focusGroupOption" *ngFor="let focusGroupOption of focusgroups; trackBy: trackFocusGroupById">{{focusGroupOption.name}}</option>
-                                </select>
-                            </div>
+                            <!--<div class="form-group">-->
+                                <!--<label class="form-control-label" for="field_focusGroup">Focus Group</label>-->
+                                <!--<select class="form-control" id="field_focusGroup" name="focusGroup" [(ngModel)]="meeting.focusGroup" required>-->
+                                    <!--<option [ngValue]="null"></option>-->
+                                    <!--<option [ngValue]="focusGroupOption.id === meeting.focusGroup?.id ? meeting.focusGroup : focusGroupOption" *ngFor="let focusGroupOption of focusgroups; trackBy: trackFocusGroupById">{{focusGroupOption.name}}</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
                         </div>
                         <div class="form-actions">
                             <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
