--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -8,7 +8,7 @@
         <p class="text-white">We work hard, we result perfect</p>
         <h1 class="text-white">Creative Digital Agency</h1>
         <h3 class="white">Multi Purpose Template</h3>
-        <a  class="primary-btn banner-btn" (click)="test()">Explore Us</a>
+        <a  class="primary-btn banner-btn" >Explore Us</a>
         <br>
         <i class="fa fa-chevron-down white mt-5 arrow bounce" aria-hidden="true"></i>
     </div>
