--- a/src/main/webapp/app/entities/aptitude-test/aptitude-test-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/aptitude-test/aptitude-test-delete-dialog.component.html
@@ -1,19 +1,19 @@
 <form name="deleteForm" (ngSubmit)="confirmDelete(aptitudeTest.id)">
     <div class="modal-header">
-        <h4 class="modal-title">Confirm delete operation</h4>
+        <h4 class="modal-title">Eliminar prueba de aptitud</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p id="jhi-delete-aptitudeTest-heading">Are you sure you want to delete this Aptitude Test?</p>
+        <p id="jhi-delete-aptitudeTest-heading">¿Está seguro que desea eliminar esta prueba de aptitud?</p>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
-            <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span>Cancel</span>
+        <button type="button" class="btn btn-secondary btn-raised" data-dismiss="modal" (click)="clear()">
+            <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span>Cancelar</span>
         </button>
-        <button id="jhi-confirm-delete-aptitudeTest" type="submit" class="btn btn-danger">
-            <fa-icon [icon]="'times'"></fa-icon>&nbsp;<span>Delete</span>
+        <button id="jhi-confirm-delete-aptitudeTest" type="submit" class="btn btn-danger btn-raised">
+            <fa-icon [icon]="'times'"></fa-icon>&nbsp;<span>Eliminar</span>
         </button>
     </div>
 </form>
