--- a/src/main/webapp/app/entities/focus-group/focus-group-management.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-management.component.html
@@ -55,7 +55,7 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-12 col-md-6 col-lg-6">
+                        <div class="col-12 col-md-6 col-lg-4">
                             <ul class="no-list-style">
                                 <li class="mb-2">
                                     <span class="text-bold-500 primary"><a><i class="ft-calendar font-small-3"></i> Fecha:</a></span>
@@ -64,7 +64,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-6">
+                        <div class="col-12 col-md-6 col-lg-4">
                             <ul class="no-list-style">
                                 <li class="mb-2">
                                     <span class="text-bold-500 primary"><a><i
@@ -73,6 +73,9 @@
                                         class="display-block overflow-hidden">{{meeting.time.toDate().toLocaleTimeString()}}</span>
                                 </li>
                             </ul>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <a *ngIf="checkDate()" href="{{meeting.callURL}}"><i class="ft-video"></i> Iniciar llamada.</a>
                         </div>
                     </div>
                     <hr>
@@ -147,7 +150,8 @@
                                 <div class="card-block text-center">
                                     <h4 class="card-title">{{participant.user.user.firstName}} {{participant.user.user.lastName}}</h4>
                                     <p class="category text-gray font-small-4">{{participant.user.mail}}</p>
-                                    <a class="btn btn-lg gradient-pomegranate font-small-2 white p-2 mr-2 btn-hoverable">Expulsar
+                                    <a class="btn btn-lg gradient-pomegranate font-small-2 white p-2 mr-2 btn-hoverable"
+                                       (click)="expulsion(participant, modalToDisplay)">Expulsar
                                         participante</a>
                                     <!--<a class="btn btn-lg btn-outline-grey font-small-2 p-2">Enviar mensaje</a>-->
                                     <!--<hr class="grey">-->
@@ -166,71 +170,18 @@
                             </div>
                         </div>
                     </div>
-                    <div *ngIf="items.length === 0" class="card-block">
-                        <span class="display-block overflow-hidden">No se encontraron resultados.</span>
-                    </div>
+                </div>
+                <div *ngIf="items.length === 0" class="card-block">
+                    <span class="display-block overflow-hidden">No se encontraron resultados.</span>
                 </div>
             </div>
-            <ng-template #noParticipants>
-                <div class="card-block">
-                    <span class="display-block overflow-hidden">Aún no hay participantes aceptados.</span>
-                </div>
-            </ng-template>
+        </div>
+        <ng-template #noParticipants>
+            <div class="card-block">
+                <span class="display-block overflow-hidden">Aún no hay participantes aceptados.</span>
+            </div>
+        </ng-template>
     </section>
-    <!--<div class="row" matchHeight="card">-->
-    <!--<div class="col-xl-4 col-lg-12">-->
-    <!--<div class="card">-->
-    <!--<div class="card-header">-->
-    <!--<h4 class="card-title mb-0">Participantes</h4>-->
-    <!--</div>-->
-    <!--<div class="card-body">-->
-    <!--<div class="card-block">-->
-    <!--<div class="media mb-3" *ngFor="let participant of participants">-->
-    <!--<img-->
-    <!--class="media-object d-flex mr-3 align-self-center bg-primary height-50 rounded-circle">-->
-    <!--<div class="media-body">-->
-    <!--<h4 class="font-medium-1 mt-2 mb-0">{{participant.user.name}}</h4>-->
-    <!--</div>-->
-    <!--<a class="d-flex ml-3 btn btn-raised btn-round gradient-blackberry py-2 width-150 justify-content-center white">Mensaje</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-xl-8 col-lg-12">-->
-    <!--<div class="card">-->
-    <!--<div class="card-header">-->
-    <!--<h4 class="card-title mb-0">Reuniones</h4>-->
-    <!--</div>-->
-    <!--<div class="card-body">-->
-    <!--<div class="card-block">-->
-    <!--<table class="table table-responsive-md text-center">-->
-    <!--<thead>-->
-    <!--<tr>-->
-    <!--<th>Nombre</th>-->
-    <!--<th>Fecha</th>-->
-    <!--<th>Hora</th>-->
-    <!--<th></th>-->
-    <!--</tr>-->
-    <!--</thead>-->
-    <!--<tbody>-->
-    <!--<tr *ngFor="let meeting of meetings">-->
-    <!--<td>{{meeting.name}}</td>-->
-    <!--<td>{{meeting.date.toDate().toLocaleDateString()}}</td>-->
-    <!--<td>{{meeting.time.toDate().toLocaleTimeString()}}</td>-->
-    <!--<td>-->
-    <!--<a class="info p-0" data-original-title="" title="" href="{{meeting.callCode}}">-->
-    <!--<i class="ft-video font-medium-3 mr-2"></i>-->
-    <!--</a>-->
-    <!--</td>-->
-    <!--</tr>-->
-    <!--</tbody>-->
-    <!--</table>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
 </div>
 
 
