Fixed navbar logo redirection

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!--Esto le da un margen a la izquiera para que no lo tape el menu lateral-->
         <div class="">
-            <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
+            <a class="navbar-brand logo"(click)="logoRedirection()">
                 <span class="logo-img"></span>
             </a>
         </div>
