--- a/src/main/webapp/app/entities/focus-group/focus-group-management.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-management.component.html
@@ -37,12 +37,12 @@
     <!--</div>-->
     <!--</div>-->
     <!--</div>-->
-    <section id="reunionSection" class="mt-3">
-        <div>
+    <section id="reunionSection" class="mt-3 row">
+        <div class="col-12">
             <h4 class="text-bold-500">Reunión</h4>
             <hr>
         </div>
-        <div *ngIf="meeting; else noMeeting" class="card">
+        <div *ngIf="meeting; else noMeeting" class="card col-12">
             <div class="card-header">
                 <h3>{{meeting.name}}</h3>
                 <h5 class="col-12 col-md-12 col-sm-12">Información</h5>
@@ -83,13 +83,15 @@
             </div>
         </div>
         <ng-template #noMeeting>
-            <button id="jh-create-entity" class="btn btn-raised btn-primary float-left"
-                    [routerLink]="['/meeting/new']">
-                <i class="ft-plus"></i>
-                <span>
+            <div class="card-block">
+                <button id="jh-create-entity" class="btn btn-raised btn-primary float-left"
+                        [routerLink]="['/meeting/new']">
+                    <i class="ft-plus"></i>
+                    <span>
                     Planificar reunión
                 </span>
-            </button>
+                </button>
+            </div>
         </ng-template>
     </section>
     <section id="participantsSection">
@@ -97,11 +99,22 @@
             <h4 class="text-bold-500">Participantes</h4>
             <hr>
         </div>
-        <div class="input-group my-4">
-            <div class="input-group-prepend">
-                <i class="input-group-text ft-search info" id="basic-addon1"></i>
-                <input type="text" class="form-control" placeholder="Buscar por nombre..."
-                       [(ngModel)]="searchText"/>
+        <div class="row my-4 justify-content-between">
+            <div class="input-group col-6">
+                <div class="input-group-prepend">
+                    <i class="input-group-text ft-search info" id="basic-addon1"></i>
+                    <input type="text" class="form-control" placeholder="Buscar por nombre..."
+                           [(ngModel)]="searchText"/>
+                </div>
+            </div>
+            <div class="col-4">
+                <button class="btn btn-raised btn-primary float-right"
+                        [routerLink]="['../../test-result/']">
+                    <i class="ft-eye"></i>
+                    <span>
+                            Lista de aplicantes
+                        </span>
+                </button>
             </div>
         </div>
         <div *ngIf="(participants | participantFilter:searchText) as items; else noParticipants" class="col-12">
