Fixed meeting rerouting

--- a/src/main/webapp/app/entities/user-app/activities-detail.component.html
+++ b/src/main/webapp/app/entities/user-app/activities-detail.component.html
@@ -45,7 +45,7 @@
                 <div [ngSwitch]="view">
                     <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [events]="events"
                                              [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen"
-                                             (dayClicked)="dayClicked($event.day)">
+                                             (dayClicked)="dayClicked($event.day)" (eventClicked)="goToGroup($event.event)">
                                              <!--(eventClicked)="handleEvent('Clicked', $event.event)"-->
                                              <!--(eventTimesChanged)="eventTimesChanged($event)">-->
                     </mwl-calendar-month-view>
