--- a/src/main/webapp/app/entities/participant/participant-create.component.html
+++ b/src/main/webapp/app/entities/participant/participant-create.component.html
@@ -112,11 +112,11 @@
                         <div _ngcontent-c5="" class="form-actions right">
                             <button _ngcontent-c5="" class="btn btn-raised btn-warning mr-1" type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
                                 <i _ngcontent-c5="" class="ft-x"></i>
-                                <fa-icon></fa-icon>Cancel
+                                <fa-icon></fa-icon>Cancelar
                             </button>
                             <button _ngcontent-c5="" class="btn btn-raised btn-primary" type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving">
                                 <i _ngcontent-c5="" class="fa fa-check-square-o"></i>
-                                <fa-icon [icon]="'save'"></fa-icon>&nbsp;Save
+                                <fa-icon [icon]="'save'"></fa-icon>Registrar
                             </button>
                         </div>
                     </form>
